--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "framer-motion": "^10.16.4",
     "js-base64": "^3.7.7",
