--- a/package.json
+++ b/package.json
@@ -3,23 +3,33 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@sendgrid/mail": "^8.1.4",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
+    "firebase": "^11.4.0",
     "framer-motion": "^10.16.4",
+    "helmet": "^8.0.0",
     "js-base64": "^3.7.7",
     "lucide-react": "^0.284.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.30.0",
     "styled-components": "^6.0.8",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -32,6 +42,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.4",
     "autoprefixer": "^10.4.20",
+    "firebase-tools": "^13.32.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "vite": "^4.4.9"
